<resources>
    <string name="app_name">The VIP App</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="registration">Registration</string>
    <string name="new_user_">New User? Register</string>
    <string name="register">Register</string>
    <string name="haven_t_received_code_yet">Haven\'t received code yet?</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="you_have_received_a_verification_code_on_xxxxxx_gmail_com">You have received a verification code on %s</string>
    <string name="reset">Reset</string>
    <string name="hello">Hello</string>
    <string name="you_have_reset_your_password_nsuccessfully">You have reset your password successfully.</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="send">Send</string>
    <string name="my_account">My Account</string>
    <string name="edit">Edit</string>
    <string name="log_out">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_2">Change Password</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="my_itinerary">My Itinerary</string>
    <string name="notification">Notification</string>
    <string name="top_restaurants">Top Restaurants</string>
    <string name="top_clubs">Top Clubs</string>
    <string name="top_day_parties">Top Day Parties</string>
    <string name="top_bars">Top Bars</string>
    <string name="top_shisha_lounges">Top Shisha Lounges</string>
    <string name="whatsapp_us_for_booking">WHATSAPP us for Booking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_recommandation">Save Recommendation</string>
    <string name="recommendation">Recommendation</string>
    <string name="recommendations">Recommendations</string>
    <string name="top_recommendations">Top Recommendations</string>
    <string name="done">Done</string>
    <string name="city">City</string>
    <string name="booking">Booking</string>
    <string name="whatsapp_us_for_mor_info">WHATSAPP us for more information</string>
    <string name="promotions_amp_events"><![CDATA[Promotions & Events]]></string>
    <string name="itinerary_detail">Itinerary Detail</string>
    <string name="click_on_venue_name_to_display_your_unique_qr_code_and_present_to_the_venue_on_arrival">Click here for QR code and present to venue on arrival</string>
    <string name="day_1">DAY - 1</string>
    <string name="date_amp_time"><![CDATA[Time & Date]]></string>
    <string name="client_name">Client Name</string>
    <string name="vendor">Vendor</string>
    <string name="statisctics">Statistics</string>
    <string name="total_number_of_people_s">Total number of people - %s</string>
    <string name="total_number_of_client_s">Total number of Clients - %s</string>
    <string name="total_number_of_cancellation_s">Total number of cancellation - %s</string>
    <string name="total_number_of_booking_s">Total number of bookings - %s</string>
    <string name="total_number_of_no_show_s">Total number of \'No shows\' - %s</string>
    <string name="total_spend_s">Total spend - %s</string>
    <string name="average_spend_per_client">Average spend per client - %s</string>
    <string name="total_number_of_individual_bookings_s">Total number of individual booking - %s</string>
    <string name="itinerary">Itinerary</string>
    <string name="name">Name</string>
    <string name="group_type">Group Type</string>
    <string name="pax">Group Size</string>
    <string name="status">Status</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="cline_name_s">Client Name : %s</string>
    <string name="group_type_s">Group Type : %s</string>
    <string name="pax_s">Group Size : %s</string>
    <string name="total_spend">Total Spend</string>
    <string name="arrival_date">Arrival date</string>
    <string name="departure_date">Departure date</string>
    <string name="next">Next</string>
    <string name="spend">Spend</string>
    <string name="filter">Filter</string>
    <string name="set">Set</string>
    <string name="all_booking">All Booking</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="custom">Custom</string>
    <string name="to">to</string>
    <string name="this_year">This Year</string>
    <string name="prebook_spend">Pre-booked Spend</string>
    <string name="final_spend">Enter Final Spend</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm">Confirm</string>
    <string name="add_itinerary_day_details">Add Itinerary Day Details</string>
    <string name="go">GO</string>
    <string name="add_bottle">Add Bottle</string>
    <string name="promotions">Promotions</string>
    <string name="save">Save</string>
    <string name="all_venue">All Venue</string>
    <string name="preview">Preview</string>
    <string name="itinerary_preview">Itinerary Preview</string>
    <string name="send_a_notification_to_vendor">Send a notification to Vendor</string>
    <string name="now">Now</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="commit">Commit</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="other_booking_list">Other Booking List</string>
    <string name="client">Client</string>
    <string name="concierge">Concierge</string>
    <string name="add_booking">Add Booking</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="time">Time</string>
    <string name="table_no">Table No.</string>
    <string name="table_spend">Table Spend</string>
    <string name="description">Description</string>
    <string name="concierge_name">Concierge Name</string>
    <string name="total_client">Total Client</string>
    <string name="commission">Commission</string>
    <string name="search_venue">Search Venue</string>
    <string name="type">Type</string>
    <string name="concierge_commission">Concierge Commission</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="comment">Comment</string>
    <string name="arrived">Arrived</string>
    <string name="not_arrived">Not-Arrived</string>
    <string name="notarrived">Not Arrived</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="add_new_concierge">Add New Concierge</string>
    <string name="view_concierge">View Concierge</string>
    <string name="edit_concierge">Edit Concierge</string>
    <string name="total_commission">Total Commission</string>
    <string name="select_concierge">Select Concierge</string>
    <string name="delete">Delete</string>
    <string name="edit_booking">Edit Booking</string>
    <string name="set_availability">Set Availability</string>
    <string name="set_underline_availability">Set Availability</string>
    <string name="set_underline_cancel_subscription">Cancel Subscription</string>
    <string name="set_underline_upgrade">Upgrade</string>
    <string name="vip_booking">VIP Booking</string>
    <string name="live_booking">Live Booking</string>
    <string name="daily_availability">Daily Availability</string>
    <string name="exception_dates_availability">Exception Dates Availability</string>
    <string name="date">Date</string>
    <string name="count">Count</string>
    <string name="client_email">Client Email</string>
    <string name="notifications">Notifications</string>
    <string name="add_itinerary">Add Itinerary</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="submit">Submit</string>
    <string name="reason">Reason</string>
    <string name="first_service">First Service</string>
    <string name="bottle_type">Bottle Type</string>
    <string name="bottle_name">Bottle Name</string>
    <string name="book_now">Book Now</string>
    <string name="service">Sitting </string>
    <string name="booking_information">Booking Information</string>
    <string name="entered_final_spend">Entered Final Spend</string>
    <string name="confirmed">Confirmed</string>
    <string name="not_confirmed">Not Confirmed</string>
    <string name="cancel">Cancel</string>
    <string name="concierge_email">Concierge Email</string>
    <string name="add_bottles">Add Bottles</string>
    <string name="default_notification_channel_id">VIP5555</string>
    <string name="table_type">Table Type</string>
    <string name="bottles">Bottles</string>
    <string name="bottle_spend">Bottle Spend</string>
    <string name="max_5_image_can_upload">Max. 5 images can be uploaded</string>
    <string name="_15_mit_li">15mins late</string>
    <string name="on_time">On Time</string>
    <string name="present_this_qr_code_to_the_nvenue_on_arrival">Present this QR code to the\nvenue on arrival</string>
    <string name="copy_itinerary">Copy Itinerary</string>
    <string name="edit_itinerary">Edit Itinerary</string>
    <string name="add_concierge">Add Concierge</string>
    <string name="qr_code">QR Code</string>
    <string name="search_location">Search Location</string>
    <string name="save_promotion">Save Promotion</string>
    <string name="upload_feature_photo">Upload Feature Photo</string>
    <string name="upload_gallery_photo">Upload Gallery Photo</string>
    <string name="location">Location</string>
    <string name="upload_menu">Upload Menu</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="search_venue_recommendation">Search Venue, Recommendation</string>
    <string name="today_s_top_picks">Today\'s Picks</string>
    <string name="currently_you_do_not_have_any_upcoming_bookings">Currently you do not have any upcoming bookings.</string>
    <string name="currently_you_do_not_have_any_past_bookings">Currently you do not have any Past bookings.</string>
    <string name="date_amp_n_time"><![CDATA[Date &\nTime]]></string>
    <string name="cline_n_name">Client\nName</string>
    <string name="table_n_no">Table\nNo.</string>
    <string name="total_n_spend">Total\nSpend</string>
    <string name="latest_mixes">Latest Mixes</string>
    <string name="downloading_mixes">Downloading Mixes...</string>
    <string name="set_password">Set Password</string>
    <string name="ok">OK</string>
    <string name="in_app_password">In-App Password</string>
    <string name="or">OR</string>
    <string name="reset_my_password">Reset My Password</string>
    <string name="enter_the_verification_code_received_on_the_registered_mobile_number">Enter the verification code received on the registered mobile number.</string>
    <string name="validate_code">Validate Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
</resources>