<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".vendor.activities.VendorNotificationDetailActivity">
    <com.facebook.drawee.view.SimpleDraweeView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:actualImageScaleType="fitXY"
        app:actualImageResource="@drawable/two_layer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:textAlignment="center"
                app:navigationIcon="@drawable/ic_back_arrow"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextColor="@color/white">

                <com.vip.marrakech.customs.ToolBarTitleTextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/notifications"
                    android:textColor="@color/white"
                    android:textSize="?button" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>



     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/_10sdp"
         android:orientation="vertical"
         android:background="@color/white">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="?normal"
             android:padding="@dimen/_5sdp"
             android:id="@+id/tv_client_name"
             android:textColor="@color/black"
             android:text="@string/client_name"/>

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="?normal"
             android:padding="@dimen/_5sdp"
             android:id="@+id/tv_group"
             android:textColor="@color/black"
             android:text="@string/group_type"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="?normal"
             android:textColor="@color/black"
             android:id="@+id/tv_pax"
             android:padding="@dimen/_5sdp"
             android:text="@string/pax"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="?normal"
             android:textColor="@color/black"
             android:id="@+id/tv_date"
             android:padding="@dimen/_5sdp"
             android:text="@string/date"/>

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="?normal"
             android:textColor="@color/black"
             android:id="@+id/tv_time"
             android:padding="@dimen/_5sdp"
             android:text="@string/time"/>

         <LinearLayout
             android:layout_margin="@dimen/_5sdp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <Button
                 android:layout_width="@dimen/_80sdp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/blue_rect"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:id="@+id/btn_accept"
                 android:textSize="?button"
                 android:text="@string/accept"/>

             <Button
                 android:layout_width="@dimen/_80sdp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_rect"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:id="@+id/btn_reject"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:textSize="?button"
                 android:text="@string/reject"/>
         </LinearLayout>


         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone"
             android:id="@+id/ln_reason"
             android:padding="@dimen/_5sdp">
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_35sdp"
                 android:hint="@string/reason"
                 android:id="@+id/edt_reason"
                 android:textSize="?normal"
                 android:textColor="@color/white"
                 android:textColorHint="@color/colorHint"
                 android:background="@drawable/edit_rect"
                 android:padding="@dimen/_5sdp"/>

             <Button
                 android:layout_marginTop="@dimen/_5sdp"
                 android:layout_width="@dimen/_80sdp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/blue_rect"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:id="@+id/btn_submit"
                 android:layout_gravity="center_horizontal"
                 android:textSize="?button"
                 android:text="@string/submit"/>
         </LinearLayout>
     </LinearLayout>
    </LinearLayout>
</RelativeLayout>