<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".admin.fragments.AdminBookingFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/appBar"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            android:id="@+id/toolBar"
            android:textAlignment="center"
            app:menu="@menu/admin_main"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/white">

            <com.vip.marrakech.customs.ToolBarTitleTextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/itinerary"
                android:textColor="@color/white"
                android:textSize="?button" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/tb_selected"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:layout_height="@dimen/_30sdp">
        <TextView
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="?small"
            android:textColor="@color/white"
            android:text="@string/name"/>
        <TextView
            android:gravity="center_vertical"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="match_parent"
            android:textSize="?small"
            android:textColor="@color/white"
            android:text="@string/group_type"/>

        <TextView
            android:gravity="center"
            android:layout_width="@dimen/_40sdp"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            android:textSize="?small"
            android:text="@string/pax"/>
        <TextView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"
            android:textSize="?small"
            android:text="@string/date"
            android:gravity="center_vertical"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="match_parent"
            android:textSize="?small"
            android:text="@string/status"
            android:gravity="center_vertical"
            android:textColor="@color/white"/>

        <View
            android:layout_width="@dimen/_35sdp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_60sdp"
        android:id="@+id/rv_itinerary"
        tools:listitem="@layout/item_admin_itinerary"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:itemCount="20"/>
</LinearLayout>